...
          searching -> CircularProgressIndicator()
          locationQuery.isNotEmpty() && searchCompleted ->
              IconButton(onClick = clearLocationInput, modifier = Modifier.testTag("ClearIcon")) {
                Icon(imageVector = Icons.Default.Clear, contentDescription = "Clear")
              }
          locationQuery.isNotEmpty() && !searchCompleted ->
              IconButton(onClick = launchSearch, modifier = Modifier.testTag("SearchIcon")) {
                Icon(imageVector = Icons.Default.Search, contentDescription = "Search")
              }
        }
      }) {
        if (possibleLocations.isNotEmpty()) {
          Surface(
...
              color = MaterialTheme.colorScheme.surface) {
                LazyColumn {
                  items(possibleLocations) { location ->
                    Text(
                        text = location.name,
                        modifier =
                            Modifier.testTag("location_possibility")
                                .clickable {
                                  locationQuery = location.name
                                  searchCompleted = true
                                  showSearchBar = false
                                  updateSelectedLocation(location)
                                }
...
