...
              onClick = { onSearchClick() },
              modifier =
                  Modifier.shadow(6.dp, RoundedCornerShape(12.dp))
                      .clip(RoundedCornerShape(12.dp))
                      .height(56.dp)
                      .fillMaxWidth()
                      .testTag("button_search"),
              shape = MaterialTheme.shapes.extraLarge) {
                if (uiState.loading) {
                  SpinnerView(MaterialTheme.colorScheme.onPrimary)
                } else {
                  Icon(Icons.Rounded.Search, contentDescription = "Search")
                  Spacer(Modifier.width(8.dp))
...
                Slider(
                    value = uiState.radiusAroundLocationInM.toFloat() / 1000,
                    onValueChange = {
                      findViewModel.updateLocationSearchRadius(it.toDouble() * 1000)
                    },
                    valueRange = 1f..100f,
                    modifier = Modifier.fillMaxWidth().testTag("find_slider"))

                Spacer(Modifier.height(32.dp))

                Legend(
                    stringResource(id = R.string.find_event_event_tags_legend),
                    Icons.Rounded.Tag,
...
