...
              description = stringResource(id = R.string.navbar_home),
              testTag = "home_button"),
          ChimpagneNavigationBarItem(
              targetRoute = Route.FIND_AN_EVENT_SCREEN,
              icon = Icons.Default.Language,
              description = stringResource(id = R.string.navbar_discover),
              testTag = "discover_events_button"),
          ChimpagneNavigationBarItem(
              targetRoute = Route.MY_EVENTS_SCREEN,
              icon = Icons.Default.CalendarMonth,
              description = stringResource(id = R.string.narbar_my_events),
              testTag = "open_events_button",
              accountRequired = true))

  NavigationBar(
      containerColor =
          if (BLACKLISTED_ROUTES.contains(currentRoute)) Color.Transparent
          else NavigationBarDefaults.containerColor) {
...
