...
            overflow = TextOverflow.Ellipsis,
            modifier = Modifier.padding(16.dp))
      },
      actions = actions,
      modifier =
          Modifier.shadow(4.dp, clip = false, shape = MaterialTheme.shapes.small)
              .testTag("screen title"),
      navigationIcon = navigationIcon)
}

