...
                    if (!accountViewModel.isUserLoggedIn()) {
                      promptLogin(context, navObject)
                    } else {
                      navObject.navigateTo(Route.ACCOUNT_SETTINGS_SCREEN)
                    }
                  },
                  modifier = Modifier.testTag("account_settings_button"))
            })
      },
      floatingActionButton = {
        FloatingActionButton(
            onClick = { navObject.navigateTo(Route.EVENT_CREATION_SCREEN) },
            content = { Icon(Icons.Filled.Add, "organize an event") },
...
