...
                Button(
                    onClick = {
                      coroutineScope.launch {
                        pagerState.animateScrollToPage(pagerState.currentPage + 1)
                      }
                    },
                    modifier = Modifier.testTag("next_button").clip(RoundedCornerShape(12.dp)),
                    colors =
                        ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primary)) {
                      PanelBottomBarButtonText(
                          text = stringResource(id = R.string.event_creation_screen_next))
                    }
...
              modifier =
                  Modifier.shadow(6.dp, RoundedCornerShape(12.dp))
                      .clip(RoundedCornerShape(12.dp))
                      .background(MaterialTheme.colorScheme.primary)) {
                Button(
                    onClick = lastButtonOnClick,
                    modifier = Modifier.testTag("last_button").clip(RoundedCornerShape(12.dp)),
                    colors =
                        ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primary)) {
                      PanelBottomBarButtonText(text = lastButtonText)
                    }
              }
...
