...
            "Title")
        Spacer(Modifier.height(16.dp))
        OutlinedTextField(
            value = uiState.title,
            onValueChange = eventViewModel::updateEventTitle,
            label = { Text(stringResource(id = R.string.event_creation_screen_title)) },
            modifier = Modifier.fillMaxWidth().testTag("add_a_title"))

        Spacer(modifier = Modifier.height(16.dp))

        Legend(
            stringResource(id = R.string.event_creation_screen_description_legend),
            Icons.Rounded.Description,
...
