...
                            stringResource(id = R.string.my_events_screen_empty_create_event_list),
                        modifier = Modifier.padding(16.dp).testTag("empty create event list"))
                  }
                } else {
                  items(uiState.createdEvents.values.toList().sortedBy { it.startsAtTimestamp }) {
                      event ->
                    EventCard(event = event, modifier = Modifier.testTag("a created event")) {
                      navObject.navigateTo(Route.EVENT_SCREEN + "/${event.id}")
                    }
                  }
                }
                item {
                  Spacer(Modifier.height(16.dp))
...
